--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>Hello World Simple App</title>
+        <title>Админка</title>
     </head>
     <body>
-        <div>
-            <h1>Hello World!</h1>
+        <div style="text-align: center;">
+            <h1>Это админпанель</h1>
+            <img src="a.png" height="240px" width="200px"/>
         </div>
     </body>
 </html>
