--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <h1>Это админпанель</h1>
             <img src="a.png" height="240px" width="200px"/>
             <img src="images/four.jpg" height="240px" width="200px" />
-            <form action="http://localhost:5000/upload" method="post" enctype="multipart/form-data">
+            <form action="https://masters-client.onrender.com/upload" method="post" enctype="multipart/form-data">
 
                 <input type="file" name="myfile" />
                 <input type="submit"/>
